@@ -1220,6 +1220,9 @@ Library
 Extension Modules
 -----------------
 
+- Issue #2810: Fix cases where the Windows registry API returns
+  ERROR_MORE_DATA, requiring a re-try in order to get the complete result.
+
 - Issue #8692: Optimize math.factorial: replace the previous naive
   algorithm with an improved 'binary-split' algorithm that uses fewer
   multiplications and allows many of the multiplications to be
